--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(82, 82, 184);
+  background-image: linear-gradient(135deg, rgba(37, 204, 15, 0.616),rgba(233, 12, 12, 0.582) ) ;
+  /* background-position: center;
+  background-attachment: fixed; */
+  /* backdrop-filter: blur(20px); */
   font-family: "Anek Telugu";
 }
 .heading{
