--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,7 +3,7 @@ li{
 }
 .input{
     display: flex;
-    width: 90%;
+    width: 95%;
     position: relative;
     align-items: center;
 }
@@ -42,22 +42,41 @@ li{
     transform: scale(0.8);
     box-shadow: 0 0 5px black;
 }
+.container{
+    display: flex;
+    width: 95%;
+    margin-top: 10px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 .todos {
     display: flex;
-    justify-content: space-evenly;
-    width: 90%;
-    flex-wrap: wrap;
+    width: 46%;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 15px;
+    background-color: aquamarine;
 }
 .todos li {
     width: 100%;
 }
+.todos__heading{
+    font-size: 30px;
+    color: wheat;
+}
+
 .todos__single{
     display: flex;
-    /* width: 29%; */
     border-radius: 5px;
     padding: 20px;
     margin-top: 15px;
     background-color: yellowgreen;
+    transition: 0.2s;
+}
+.todos__single:hover{
+    box-shadow: 0 0 5px black;
+    transform: scale(1.05);
 }
 .todos__single-text{
     flex: 1;
@@ -73,9 +92,20 @@ li{
     font-size: 25px;
     cursor: pointer;
 }
-
-@media(max-width: 1200px){
-    .todos__single{
+.remove{
+    background-color: rgb(189, 14, 14);
+}
+.dragactive{
+    background-color: green;
+}
+.dragcomplete{
+    background-color: tomato;
+}
+.drag{
+    box-shadow: 0 0 10px red;
+}
+@media(max-width: 1100px){
+    .todos{
         width: 40%;
     }
 }
@@ -85,8 +115,10 @@ li{
     }
     .todos li{
         width: 95%;
+        margin-bottom: 10px;
     }
-    .todos__single{
-        width: 100%;
+    .container{
+        width: 95%;
+        flex-direction: column;
     }
 }
