--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Anek+Telugu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+body{
+  background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.616),rgba(0, 0, 0, 0.582) ), url('https://www.taskade.com/static_images/templates/top-view-notebook-with-daily-tasks-laptop.jpg') ;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
 .App{
-  width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(135deg, rgba(37, 204, 15, 0.616),rgba(233, 12, 12, 0.582) ) ;
-  /* background-position: center;
-  background-attachment: fixed; */
-  /* backdrop-filter: blur(20px); */
-  font-family: "Anek Telugu";
+  font-family: "Permanent Marker";
 }
 .heading{
   text-transform: uppercase;
   font-size: 40px;
   margin: 30px 0;
-  color: wheat;
+  color: white;
+  text-shadow: 0 0 5px yellowgreen;
   z-index: 1;
   text-align: center;
 }
